--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY CPU
+set_global_assignment -name TOP_LEVEL_ENTITY Decode
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:48:57  SEPTEMBER 25, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
@@ -52,6 +52,19 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/xor_modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/test_ALU.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/shiftR_modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/shiftL_modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/or_modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/multiplicador.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/FullAdder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/divisor.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/Complement.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/and_modulo.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/ALU.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ALU/Adder_Substractor.sv
 set_global_assignment -name SYSTEMVERILOG_FILE regfile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE resetableflipflop.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mem.sv
@@ -59,6 +72,11 @@ set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE adder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Fetch.sv
 set_global_assignment -name SYSTEMVERILOG_FILE CPU.sv
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE Decode.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
