--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -80,6 +80,14 @@ set_global_assignment -name SYSTEMVERILOG_FILE Decode.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Execute.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux3.sv
 set_global_assignment -name SYSTEMVERILOG_FILE hazardsUnitsv.sv
+set_global_assignment -name QIP_FILE ram.qip
+set_global_assignment -name SYSTEMVERILOG_FILE test_mem.sv
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_mem -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
+set_global_assignment -name EDA_TEST_BENCH_FILE test_mem.sv -section_id test_mem
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
