--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -88,6 +88,7 @@ set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulat
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_FILE test_mem.sv -section_id test_mem
+set_global_assignment -name SYSTEMVERILOG_FILE unifiedmem.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
