--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY CPU
+set_global_assignment -name TOP_LEVEL_ENTITY mem
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:48:57  SEPTEMBER 25, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
@@ -83,7 +83,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE hazardsUnitsv.sv
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name SYSTEMVERILOG_FILE test_mem.sv
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_cpu -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_mem -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
@@ -106,9 +106,6 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_execute
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_execute -section_id test_execute
 set_global_assignment -name SYSTEMVERILOG_FILE controlunit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE condunit.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE test_cpu.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME test_cpu -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_cpu
@@ -116,6 +113,9 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_cpu -section_id test
 set_global_assignment -name EDA_TEST_BENCH_NAME test_ALU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_ALU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_ALU -section_id test_ALU
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE test_mem.sv -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_FILE test_fetch.sv -section_id test_fetch
 set_global_assignment -name EDA_TEST_BENCH_FILE testRegisterFile.sv -section_id testRegisterFile
