--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -83,7 +83,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE hazardsUnitsv.sv
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name SYSTEMVERILOG_FILE test_mem.sv
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_cpu -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH outdebug -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
@@ -116,6 +116,7 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_ALU -section_id test
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE outdebug.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE test_mem.sv -section_id test_mem
 set_global_assignment -name EDA_TEST_BENCH_FILE test_fetch.sv -section_id test_fetch
 set_global_assignment -name EDA_TEST_BENCH_FILE testRegisterFile.sv -section_id testRegisterFile
@@ -123,4 +124,8 @@ set_global_assignment -name EDA_TEST_BENCH_FILE test_decode.sv -section_id test_
 set_global_assignment -name EDA_TEST_BENCH_FILE test_execute.sv -section_id test_execute
 set_global_assignment -name EDA_TEST_BENCH_FILE test_cpu.sv -section_id test_cpu
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU/test_ALU.sv -section_id test_ALU
+set_global_assignment -name EDA_TEST_BENCH_NAME outdebug -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id outdebug
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME outdebug -section_id outdebug
+set_global_assignment -name EDA_TEST_BENCH_FILE outdebug.sv -section_id outdebug
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
