--- a/PipelineProcessor.qsf
+++ b/PipelineProcessor.qsf
@@ -52,6 +52,35 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH outdebug -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
+set_global_assignment -name EDA_TEST_BENCH_NAME testRegisterFile -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testRegisterFile
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testRegisterFile -section_id testRegisterFile
+set_global_assignment -name EDA_TEST_BENCH_NAME test_cpu -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_cpu
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_cpu -section_id test_cpu
+set_global_assignment -name EDA_TEST_BENCH_NAME test_ALU -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_ALU
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_ALU -section_id test_ALU
+set_global_assignment -name EDA_TEST_BENCH_NAME outdebug -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id outdebug
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME outdebug -section_id outdebug
+set_global_assignment -name SYSTEMVERILOG_FILE test_ALU.sv
+set_global_assignment -name SYSTEMVERILOG_FILE CPU_Fetch.sv
+set_global_assignment -name SYSTEMVERILOG_FILE CPU_Execute.sv
+set_global_assignment -name SYSTEMVERILOG_FILE CPU_Decode.sv
+set_global_assignment -name SYSTEMVERILOG_FILE testFetch.sv
+set_global_assignment -name SYSTEMVERILOG_FILE testExecute.sv
+set_global_assignment -name SYSTEMVERILOG_FILE testDecode.sv
+set_global_assignment -name SYSTEMVERILOG_FILE testControlUnit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU/xor_modulo.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU/test_ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU/shiftR_modulo.sv
@@ -72,61 +101,28 @@ set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE adder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Fetch.sv
 set_global_assignment -name SYSTEMVERILOG_FILE CPU.sv
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name SYSTEMVERILOG_FILE Decode.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Execute.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux3.sv
 set_global_assignment -name SYSTEMVERILOG_FILE hazardsUnitsv.sv
-set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name SYSTEMVERILOG_FILE test_mem.sv
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH outdebug -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME test_mem -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_mem
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_mem -section_id test_mem
 set_global_assignment -name SYSTEMVERILOG_FILE unifiedmem.sv
-set_global_assignment -name SYSTEMVERILOG_FILE test_fetch.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME test_fetch -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_fetch
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_fetch -section_id test_fetch
 set_global_assignment -name SYSTEMVERILOG_FILE testRegisterFile.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME testRegisterFile -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testRegisterFile
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testRegisterFile -section_id testRegisterFile
-set_global_assignment -name SYSTEMVERILOG_FILE test_decode.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME test_decode -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_decode
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_decode -section_id test_decode
-set_global_assignment -name SYSTEMVERILOG_FILE test_execute.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME test_execute -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_execute
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_execute -section_id test_execute
 set_global_assignment -name SYSTEMVERILOG_FILE controlunit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE condunit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE test_cpu.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME test_cpu -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_cpu
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_cpu -section_id test_cpu
-set_global_assignment -name EDA_TEST_BENCH_NAME test_ALU -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_ALU
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_ALU -section_id test_ALU
 set_global_assignment -name SYSTEMVERILOG_FILE outdebug.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME outdebug -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id outdebug
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME outdebug -section_id outdebug
 set_global_assignment -name SYSTEMVERILOG_FILE TOP.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_NAME testFetch -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testFetch
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testFetch -section_id testFetch
 set_global_assignment -name EDA_TEST_BENCH_FILE test_mem.sv -section_id test_mem
-set_global_assignment -name EDA_TEST_BENCH_FILE test_fetch.sv -section_id test_fetch
 set_global_assignment -name EDA_TEST_BENCH_FILE testRegisterFile.sv -section_id testRegisterFile
-set_global_assignment -name EDA_TEST_BENCH_FILE test_decode.sv -section_id test_decode
-set_global_assignment -name EDA_TEST_BENCH_FILE test_execute.sv -section_id test_execute
 set_global_assignment -name EDA_TEST_BENCH_FILE test_cpu.sv -section_id test_cpu
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU/test_ALU.sv -section_id test_ALU
 set_global_assignment -name EDA_TEST_BENCH_FILE outdebug.sv -section_id outdebug
+set_global_assignment -name EDA_TEST_BENCH_FILE testFetch.sv -section_id testFetch
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
